<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="gr.uom.android.helpinghand.MainFrag">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="255dp"
        android:layout_height="173dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Feeling"
        android:layout_width="278dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/what_do_you_feel_like_doing_today"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="220dp"
        android:layout_height="124dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Feeling"
        app:layout_constraintVertical_bias="0.911" />

    <ImageView
        android:id="@+id/WeatherImage"
        android:layout_width="66dp"
        android:layout_height="87dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/weather"
        android:src="@drawable/sunny_s_cloudy"
        app:layout_constraintBottom_toBottomOf="@+id/weatherText"
        app:layout_constraintEnd_toStartOf="@+id/weatherText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weatherText" />

</android.support.constraint.ConstraintLayout>